Fix login button not showing on mobile devices

--- a/educhemlp.client/src/pages/app/AppLayout.scss
+++ b/educhemlp.client/src/pages/app/AppLayout.scss
@@ -406,7 +406,7 @@ a {
             >.loggeduser {
                 right: 24px;
 
-                *:not(.button-primary) {
+                *:not(.button-primary):not(a) {
                     display: none;
                 }
             }
